	* Fixed Bug #8207: Creating shortcuts in backend.php does not work in modules other than web->list or file->filelist
	* Added login image for TYPO3 4.2
	* Update all ext_emconf.php in system extensions (part 2)

2008-04-23  Michael Stucki  <michael@typo3.org>

	* Update all ext_emconf.php in system extensions (part 1)

2008-04-22  Benjamin Mack  <benni@typo3.org>

	* Fixed visual bug: DB-List - No Space Between Table and Field-Selector

2008-04-22  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #8159: Infinite loop when trying to install extension with constraints and configuration
	* Fixed bug #8203: Broken icons when creating +ext template
	* Fixed bug #8204: Typo in extended list view for select fields

2008-04-22  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #8153: [left frame-width] left frame too small for german users, credits Steffen Kamper
	* Fixed several bugs with t3editor and IE #8157, #8049, #7509,#8146, credit Tobias Liebig
	* Changed order of cache and shortcut toolbar items
	* Changed call of json_encode in t3editor to t3lib_div::array2json
	* Added missing icon variants to t3skin, thanks to Helmut Hummel for generating them
	* Fixed typos in backend.php, credits Helmut Hummel

2008-04-22  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8182: Fatal error on calling sysLog() of lock object if locking method is unknown
	* Fixed bug #8148: IRRE - Expanded or collapsed state of new child records is not handled correctly

2008-04-22  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8174: Clear all caches should clear configuration cache as well (thanks to Steffen Kamper)
	* Fixed bug #8040: Bug: Wrong check on creating folders in filelist makes them unaccessible (thanks to Moreno Feltscher)

2008-04-20  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #8138: Search in Loaded Extensions not working
	* Fixed bug #8019: missing htmlspecialchars() in adminPanel