@@ -7,6 +7,7 @@
 
 2008-04-23  Michael Stucki  <michael@typo3.org>
 
+	* Remove obsolete warning in Extension Manager
 	* Update all ext_emconf.php in system extensions (part 1)
 
 2008-04-22  Benjamin Mack  <benni@typo3.org>
